--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Keep source directory named "tags" tracked even with global ignore rules.
+!src/features/tags/
+!src/features/tags/**
