--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,4 +29,4 @@ thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
 url = "2"
 rusqlite = { version = "0.37", features = ["bundled"] }
-keyring = { version = "3", features = ["linux-native"] }
+keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }
